<resources>
    <string name="app_name">园丁小帮手</string>
    <string name="tip">唱读成绩，请参照格式：＂6号，78(+9)分＂。</string>
    <string name="lack_record_permission_hint">缺少录音权限，可能无法识别语音。</string>
    <string name="lack_write_storage_permission_hint">缺少文件读写权限，可能无法分享文件。</string>
    <string name="recordUI_back_hint">是否保存修改？</string>
    <string name="save">保存</string>
    <string name="not_save">不保存</string>
    <string name="cancel">取消</string>
    <string name="import_excel_file_name">id_name_info.xls</string>
    <string name="back">返回</string>
    <string name="edit">编辑</string>
    <string name="select_all">全选</string>
    <string name="recordUI_empty_message">无成绩单，请点击下方录音按钮创建新成绩单。</string>
    <string name="cancel_select_all">取消全选</string>
    <string name="save_successfully">保存成功</string>
    <string name="confirm">确定</string>
    <string name="please_enter_the_test_name">请输入测验名和总分：</string>
    <string name="test_name_cannot_be_empty">测验名不能为空~</string>
    <string name="share_file">分享文件</string>
    <string name="illegal_stu_id_hint">学号只接受数字</string>
    <string name="score_has_blank_space_hint">学号为＂%1$s＂的成绩＂%2$s＂中带有空格，请去除空格</string>
    <string name="illegal_score_hint">成绩只接受算术表达式，学号为＂%1$s＂的成绩＂%2$s＂非法</string>
    <string name="same_stu_id_hint">学号＂%1$s＂重复了</string>
    <string name="alarm">警告</string>
    <string name="test_long_click_delete_hint">将要删除＂%1$s＂</string>
    <string name="delete_one_item_hint">是否删除该条目？</string>
    <string name="delete_multiple_item_hint">是否删除这%1$d个条目？</string>
    <string name="no_valid_mark_hint">语音识别结果为＂%1$s＂\n无有效成绩数据，请重新唱读！\n唱读格式请参照：＂6号，78(+9)分＂。</string>
    <string name="hint">提示</string>
    <string name="recordUI_record_same_stu_id_hint">学号＂%1$s＂已存在，是否需要更改成绩＂%2$s＂为＂%3$s＂？</string>
    <string name="xunfei_record_init_fail_hint">初始化失败，错误码：＂%1$d＂，请点击网址https://www.xfyun.cn/document/error-code查询解决方案</string>
    <string name="stu_info">学生基本信息</string>
    <string name="stu_info_UI_back_hint">是否保存修改？</string>
    <string name="stu_info_UI_empty_message">暂无学生信息，请点击下方添加按钮，添加学生信息。</string>
    <string name="insert_stu_id_hint">请输入阿拉伯数字</string>
    <string name="insert_stu_name_hint">请输入姓名</string>
    <string name="insert_stu_gender_hint">请输入＂男＂或＂女＂</string>
    <string name="insert_one_stu_info">插入一条学生信息</string>
    <string name="insert_same_stu_id_hint">已存在相同学号＂%1$s＂，请重新输入学号。</string>
    <string name="insert_empty_hint">姓名或性别栏为空</string>
    <string name="insert_illegal_stu_gender_hint">性别非＂男＂或＂女＂</string>
    <string name="insert_illegal_stu_id_hint">学号只接受数字</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="export">导出</string>
    <string name="already_select">已选择</string>
    <string name="zero">0</string>
    <string name="delete">删除</string>
    <string name="stu_id">学号</string>
    <string name="stu_name">姓名</string>
    <string name="stu_gender">性别</string>
    <string name="score">成绩</string>
    <string name="total_score">总成绩</string>
    <string name="add">添加</string>
    <string name="not_speak">您好像没有说话哦。。。</string>
    <string name="set_up">设置</string>
    <string name="correct">订正</string>
    <string name="statistical_info">完成情况</string>
    <string name="test_full_mark">总\t\t\t\t分：</string>
    <string name="lack_score_name">成绩尚缺：</string>
    <string name="lack_correct_name">订正尚缺：</string>
    <string name="full_mark">总\t\t分：</string>
    <string name="test_name">测试名：</string>
    <string name="gender">性别：</string>
    <string name="name">姓名：</string>
    <string name="show_gender">成绩单中显示\＂性别\＂列</string>
    <string name="revision_completed">订正已完成。</string>
    <string name="revision_uncompleted">订正尚未完成。</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id">学号：</string>
    <string name="there_is_no">无</string>
    <string name="stu_id_can_not_be_null">学号不能为空</string>
    <string name="fractional_statistics">分数段统计</string>
    <string name="average_score">均&#8195;&#8195;分：</string>
    <string name="_100">100</string>
    <string name="test_time">测试时间：</string>
    <string name="_2019_12_18">2019-12-18</string>
    <string name="_92_67">92.67分</string>
    <string name="excellent_score_line">优秀分数线：</string>
    <string name="_95">95</string>
    <string name="_18">18人</string>
    <string name="fractional_segment">分数段</string>
    <string name="full_mark_title">满分：</string>
    <string name="_3">3人</string>
    <string name="_90">90</string>
    <string name="_27">27人</string>
    <string name="_80">80</string>
    <string name="_10">10人</string>
    <string name="_70">70</string>
    <string name="_1">1</string>
    <string name="_0">0人</string>
    <string name="_60">60</string>
    <string name="contain">（含）</string>
    <string name="not_contain">（不含）</string>
    <string name="no_participation_or_0_score">未参试或0分：</string>
    <string name="copy_info">复制信息</string>
    <string name="clear">清空</string>
    <string name="voice_input_score">语音录入成绩</string>
    <string name="create_number_blank_transcripts">创建空白成绩单（数字）</string>
    <string name="create_rank_blank_transcripts">创建空白成绩单（等级）</string>
    <string name="delete_the_test">删除该测验</string>
    <string name="stu_basic_info">学生基本信息</string>
    <string name="no_transcript_record_hint">暂无成绩单记录，请点击下方录音按钮创建新成绩单。</string>
</resources>
