<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<!--    <TextView-->
<!--        android:id="@+id/stu_test_name"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="50dp"-->
<!--        android:gravity="center"-->
<!--        android:layout_weight="1"-->
<!--        android:text="测试" />-->

    <TextView
        android:id="@+id/stu_id"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/stu_id" />

    <TextView
        android:id="@+id/stu_name"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/stu_name" />

    <TextView
        android:id="@+id/stu_gender"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/stu_gender" />

    <EditText
        android:id="@+id/stu_score"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_weight="1.5"
        android:background="@null"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="15sp"
        android:text="@string/score"
        android:hint="@null"/>

    <TextView
        android:id="@+id/stu_total_score"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_weight="1.2"
        android:text="@string/total_score" />

</LinearLayout>