<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/record_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_weight="1" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/stu_id" />

                <ImageView
                    android:id="@+id/id_sort"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/ic_drop_down"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:onClick="idSortControl"
                    android:contentDescription="@null"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/stu_name"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/stu_name" />

        <TextView
            android:id="@+id/stu_gender"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/stu_gender" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_weight="1.5" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/stu_score"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/score" />

                <ImageView
                    android:id="@+id/score_sort"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:src="@drawable/ic_drop_down"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="12dp"
                    android:onClick="scoreSortControl"
                    android:contentDescription="@null"
                    android:visibility="gone"/>

            </RelativeLayout>

        </LinearLayout>


        <TextView
            android:id="@+id/total_score"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_weight="1.2"
            android:textStyle="bold"
            android:text="@string/total_score" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/correct" />

        <ImageView
            android:id="@+id/check_box"
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:gravity="center"
            android:visibility="gone"
            android:contentDescription="@null"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <com.example.teacher_assistant_test.util.RecyclerViewEmptySupport
                android:id="@+id/Recycler_View_Result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants"
                android:fastScrollEnabled="false"
                android:scrollbars="vertical" />

            <include layout="@layout/empty_view" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/share_by_excel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#FFF"
            android:text="@string/export"
            android:layout_gravity="bottom"/>

<!--        <com.github.clans.fab.FloatingActionButton-->
<!--            android:id="@+id/record_fab"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center_horizontal"-->
<!--            android:src="@drawable/ic_btn_speak_now"-->
<!--            app:fab_colorNormal="@color/colorAccent"-->
<!--            app:fab_colorPressed="@color/colorAccentDark" />-->

        <Button
            android:id="@+id/save_to_db"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/colorAccent"
            android:textColor="#FFF"
            android:text="@string/save"
            android:layout_gravity="bottom"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/my_collection_bottom_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#e6e6e6"
        android:orientation="vertical"
        android:visibility="gone" >

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e5e5e5" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="#ffffff" >

            <TextView
                android:id="@+id/tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="15dp"
                android:text="@string/already_select"
                android:textColor="#1A1A1A"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_select_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="9dp"
                android:layout_marginStart="9dp"
                android:layout_toRightOf="@+id/tv"
                android:text="@string/zero"
                android:textColor="#1A1A1A"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="80dp"
                android:layout_height="33dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:background="@drawable/button_unclickable_shape"
                android:gravity="center"
                android:text="@string/delete"
                android:textColor="#b7b8bd"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/select_all"
                android:layout_width="80dp"
                android:layout_height="33dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginEnd="15dp"
                android:layout_toLeftOf="@+id/btn_delete"
                android:background="@drawable/bg_select_all"
                android:gravity="center"
                android:text="@string/select_all"
                android:textColor="#000001"
                android:textSize="14sp" />


        </RelativeLayout>

    </LinearLayout>

</LinearLayout>