<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <com.example.teacher_assistant_test.util.TitleBarView
        android:id="@+id/title5"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorAccent"
        app:centerTitle="@string/set_up"
        app:centerTextColor="#FFF"
        app:leftDrawable="@drawable/ic_back"
        app:leftTextColor="#FFF"
        app:leftText="@string/back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show_gender"
            android:textColor="@color/black0"
            android:textSize="16sp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"/>

        <com.example.library.SwitchButton
            android:id="@+id/switch_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:layout_gravity="center_vertical"
            app:sb_openBackground="@color/colorAccent"/>

    </LinearLayout>

</LinearLayout>