<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_corner_rect_solid_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvRecord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_option_item"
            android:drawablePadding="15dp"
            android:gravity="left|center_vertical"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:text="@string/voice_input_score"
            android:textColor="@color/gray0"
            android:textSize="16sp"/>

        <View
            style="@style/Line"/>

        <TextView
            android:id="@+id/tvManualInputDigitalResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_option_item"
            android:drawablePadding="15dp"
            android:gravity="left|center_vertical"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:text="@string/create_number_blank_transcripts"
            android:textColor="@color/gray0"
            android:textSize="16sp"/>

        <View
            style="@style/Line"/>

        <TextView
            android:id="@+id/tvManualInputRankResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_option_item"
            android:drawablePadding="15dp"
            android:gravity="left|center_vertical"
            android:padding="20dp"
            android:paddingLeft="20dp"
            android:text="@string/create_rank_blank_transcripts"
            android:textColor="@color/gray0"
            android:textSize="16sp"/>

    </LinearLayout>
</FrameLayout>