<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="10dp"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:id="@+id/ll_edit_parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/test_full_mark"
            android:textColor="@color/black0"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/test_full_mark_edit"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="3"
            android:gravity="center"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lack_score_name"
            android:textColor="@color/black0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lack_score_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lack_correct_name"
            android:textColor="@color/black0"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lack_correct_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</LinearLayout>