<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="30dp"
    android:paddingRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="学号"
            android:textColor="@color/black0"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/stu_id_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="8"
            android:hint="@string/insert_stu_id_hint"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="姓名"
            android:textColor="@color/black0"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/stu_name_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="5"
            android:hint="@string/insert_stu_name_hint"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="性别"
            android:textColor="@color/black0"
            android:textSize="16sp"/>

        <EditText
            android:id="@+id/stu_gender_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="1"
            android:hint="@string/insert_stu_gender_hint"
            android:inputType="text" />

    </LinearLayout>




</LinearLayout>